# python_storageObject

./: LICENSE  README.md  pyproject.toml
storageObject/: __init__.py  storageobject.py
tests/: test_storageobject.py
