[project]
name = "python_storageObject"
version = "1.1.0"
description = "Thread-safe in-memory key-value storage"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "Mogduz", email = "gerald.leikam@aol.com" } ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Mogduz/python_storageObject"
Repository = "https://github.com/Mogduz/python_storageObject"